--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Annalyn Sarmiento | Web Developer" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/annalyncs/my-portfolio/master/images/og-image.png" />
-    <meta property="og:description" content="My portfolio site showing projects using latest skills including : HTML, CSS, jQuery, JavaScript, React, Redux, Node.js, Express, mongoDB, and Mongoose." />
+    <meta property="og:title" content="Annalyn Sarmiento | Front-End Developer and Web Designer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://annalyncs.github.io/my-portfolio/" />
     <title>Annalyn Sarmiento | Front End Developer & Designer</title>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/ppx7tut.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167573427-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-167573427-1');
+    </script>
 </head>
 
 <body>
