update relative paths

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta property="og:title" content="Annalyn Sarmiento | Front-End Developer and Web Designer" />
     <meta property="og:type" content="website" />
     <title>Annalyn Sarmiento | Front End Developer & Designer</title>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167573427-1"></script>
@@ -45,7 +45,7 @@
             <p><span>Front-end developer</span> and <span>designer</span> in Los Angeles, CA</p>
 
             <div class="landing--badge">
-                <img src="/assets/freelance%20badge.png" alt="Currenty Available for Freelance">
+                <img src="assets/freelance%20badge.png" alt="Currenty Available for Freelance">
             </div>
         </div>
     </section>
@@ -134,7 +134,7 @@
             <div class="contact-link-item contact-linkedin">
                 <a href="https://www.linkedin.com/in/annalyn-sarmiento/" target="_blank">
 
-                    <img src="/assets/icons/linkedin.png" alt="Linkedin" />
+                    <img src="assets/icons/linkedin.png" alt="Linkedin" />
 
                 </a>
             </div>
@@ -142,13 +142,13 @@
             <div class="contact-link-item contact-email">
                 <a href="https://dribbble.com/annalyncs" target="_blank">
 
-                    <img src="/assets/icons/dribbble.png" alt="Dribbble" />
+                    <img src="assets/icons/dribbble.png" alt="Dribbble" />
                 </a>
             </div>
 
             <div class="contact-link-item contact-github">
                 <a href="https://github.com/annalyncs" target="_blank">
-                    <img src="/assets/icons/github.png" alt="Github" />
+                    <img src="assets/icons/github.png" alt="Github" />
                 </a>
             </div>
 
@@ -163,5 +163,5 @@
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </body></html>
