update more relative paths

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </header>
         <div class="about--content">
             <div class="about--img">
-                <img src="/assets/about-me%20image.jpg" alt="Annalyn Sarmiento Photo">
+                <img src="assets/about-me%20image.jpg" alt="Annalyn Sarmiento Photo">
             </div>
             <div class="about--text">
                 <h3 class="h3 about--text-title">hello,</h3>
@@ -90,11 +90,11 @@
             <div class="web-design-section">
                 <div class="web-design-item">
                     <figure class="web-design-item--img">
-                        <img src="/assets/wabi%20sabi%20spec%20mock%20up.png" alt="Wabi Sabi Squarespace Design">
+                        <img src="assets/wabi%20sabi%20spec%20mock%20up.png" alt="Wabi Sabi Squarespace Design">
                         <figcaption>"Wabi Sabi" - Squarespace Design Spec Site</figcaption>
                     </figure>
                     <div class="web-design-item--hover">
-                        <img src="/assets/Wabi%20Sabi%20Spec.jpg" alt="Wabi Sabi Squarespace Design Spec">
+                        <img src="assets/Wabi%20Sabi%20Spec.jpg" alt="Wabi Sabi Squarespace Design Spec">
                     </div>
 
                     <div class="web-design--overlay">
