final relative path update

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 
                 <div class="web-design-item">
                     <figure class="web-design-item--img">
-                        <img src="/assets/twilight%20spec%20mock%20up.png" alt="Twilight Squarespace Design">
+                        <img src="assets/twilight%20spec%20mock%20up.png" alt="Twilight Squarespace Design">
                         <figcaption>"Twilight" - Squarespace Design Spec Site</figcaption>
                     </figure>
                     <div class="web-design-item--hover">
-                        <img src="/assets/Twilight%20Spec.jpg" alt="Twilight Squarespace Design Spec">
+                        <img src="assets/Twilight%20Spec.jpg" alt="Twilight Squarespace Design Spec">
                     </div>
 
                     <div class="web-design--overlay">
