--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:title" content="Annalyn Sarmiento | Front-End Developer and Web Designer" />
     <meta property="og:type" content="website" />
     <title>Annalyn Sarmiento | Front End Developer & Designer</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 
