update about text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </p>
 
                     <p>
-                        I enjoy the creative process of translating the user experience and design to code. When I'm not working you can find me with a good book, trying out new recipes in the kitchen, or enjoying the outdoors.
+                        I enjoy the creative process of translating the user experience and design to code. In my free time you can find me with a good book, trying out new recipes in the kitchen, or enjoying the outdoors.
                     </p>
 
                     <p>I’m currently available for freelance work. Let’s talk!</p>
