--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167573427-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-167573427-1');
+
     </script>
 </head>
 
@@ -30,7 +34,11 @@
         </div>
 
         <div id="main-nav--list-wrap" class="main-nav--list-wrap" tabindex="1">
-            <span class="mobile-nav--btn">Menu &#9662;</span>
+            <div class="mobile-nav--btn">
+                <div id="icon-5" class="icon">
+                    <div id="menu-1" class="menu"></div>
+                </div>
+            </div>
             <ul class="main-nav--list">
                 <li class="main-nav--item main-nav--about hover-underline" id="main-nav--about" data-scroll-to="about">About</li>
                 <li class="main-nav--item main-nav--portfolio hover-underline" id="main-nav--portfolio" data-scroll-to="portfolio">Portfolio</li>
@@ -165,4 +173,6 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/app.js"></script>
-</body></html>
+</body>
+
+</html>
