update social icons

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="contact-link-item contact-linkedin">
                 <a href="https://www.linkedin.com/in/annalyn-sarmiento/" target="_blank">
 
-                    <img src="assets/icons/linkedin.png" alt="Linkedin" />
+                    <img src="assets/icons/linkedin-icon.png" alt="Linkedin" />
 
                 </a>
             </div>
@@ -151,13 +151,13 @@
             <div class="contact-link-item contact-email">
                 <a href="https://dribbble.com/annalyncs" target="_blank">
 
-                    <img src="assets/icons/dribbble.png" alt="Dribbble" />
+                    <img src="assets/icons/dribbble-icon.png" alt="Dribbble" />
                 </a>
             </div>
 
             <div class="contact-link-item contact-github">
                 <a href="https://github.com/annalyncs" target="_blank">
-                    <img src="assets/icons/github.png" alt="Github" />
+                    <img src="assets/icons/github-icon.png" alt="Github" />
                 </a>
             </div>
 
