--- a/index.html
+++ b/index.html
@@ -173,6 +173,21 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/app.js"></script>
+
+    <!--Statcounter-->
+    <script type="text/javascript">
+        var sc_project = 12330579;
+        var sc_invisible = 1;
+        var sc_security = "792fff6d";
+
+    </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript>
+        <div class="statcounter"><a title="Web Analytics
+        Made Easy - StatCounter" href="https://statcounter.com/" target="_blank"><img class="statcounter" src="https://c.statcounter.com/12330579/0/792fff6d/1/" alt="Web Analytics Made Easy -
+        StatCounter"></a></div>
+    </noscript>
+    <!-- End of Statcounter Code -->
 </body>
 
 </html>
