added event tracking

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h2>contact</h2>
         </header>
 
-        <p class="contact-main"><span>Say hello</span> — <a href="mailto:annalyn.c.s@gmail.com" class="hover-underline">annalyn.c.s@gmail.com</a></p>
+        <p class="contact-main"><span>Say hello</span> — <a href="mailto:annalyn.c.s@gmail.com" class="hover-underline email-link">annalyn.c.s@gmail.com</a></p>
         <p>or find me here:</p>
         <div class="contact-links">
 
@@ -148,7 +148,7 @@
                 </a>
             </div>
 
-            <div class="contact-link-item contact-email">
+            <div class="contact-link-item contact-dribbble">
                 <a href="https://dribbble.com/annalyncs" target="_blank">
 
                     <img src="assets/icons/dribbble-icon.png" alt="Dribbble" />
