--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         gtag('config', 'UA-167573427-1');
 
     </script>
+
 </head>
 
 <body>
@@ -188,7 +189,7 @@
         Made Easy - StatCounter" href="https://statcounter.com/" target="_blank"><img class="statcounter" src="https://c.statcounter.com/12330579/0/792fff6d/1/" alt="Web Analytics Made Easy -
         StatCounter"></a></div>
     </noscript>
-    <!-- End of Statcounter Code -->
+    <!-- End Statcounter Code -->
 </body>
 
 </html>
