--- a/index.html
+++ b/index.html
@@ -1,195 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Annalyn Sarmiento | Front-End Developer and Web Designer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:title"
+      content="Annalyn Sarmiento | Front-End Developer and Web Designer"
+    />
     <meta property="og:type" content="website" />
     <title>Annalyn Sarmiento | Front End Developer & Designer</title>
     <link rel="shortcut icon" href="assets/favicon.ico" />
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167573427-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-167573427-1"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'UA-167573427-1');
-
+      gtag("config", "UA-167573427-1");
     </script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!--   NAV -->
     <nav role="navigation" class="main-nav">
-        <div class="main-nav--title" id="main-nav--title">
-            <span class="main-nav--item main-nav--landing hover-underline" id="main-nav--landing" data-scroll-to="landing">annalyn sarmiento</span>
-        </div>
+      <div class="main-nav--title" id="main-nav--title">
+        <span
+          class="main-nav--item main-nav--landing hover-underline"
+          id="main-nav--landing"
+          data-scroll-to="landing"
+          >annalyn sarmiento</span
+        >
+      </div>
 
-        <div id="main-nav--list-wrap" class="main-nav--list-wrap" tabindex="1">
-            <div class="mobile-nav--btn">
-                <div id="icon-5" class="icon">
-                    <div id="menu-1" class="menu"></div>
-                </div>
-            </div>
-            <ul class="main-nav--list">
-                <li class="main-nav--item main-nav--about hover-underline" id="main-nav--about" data-scroll-to="about">About</li>
-                <li class="main-nav--item main-nav--portfolio hover-underline" id="main-nav--portfolio" data-scroll-to="portfolio">Portfolio</li>
-                <li class="main-nav--item main-nav--contact hover-underline" id="main-nav--contact" data-scroll-to="contact">Contact</li>
-            </ul>
+      <div id="main-nav--list-wrap" class="main-nav--list-wrap" tabindex="1">
+        <div class="mobile-nav--btn">
+          <div id="icon-5" class="icon">
+            <div id="menu-1" class="menu"></div>
+          </div>
         </div>
+        <ul class="main-nav--list">
+          <li
+            class="main-nav--item main-nav--about hover-underline"
+            id="main-nav--about"
+            data-scroll-to="about"
+          >
+            About
+          </li>
+          <li
+            class="main-nav--item main-nav--portfolio hover-underline"
+            id="main-nav--portfolio"
+            data-scroll-to="portfolio"
+          >
+            Portfolio
+          </li>
+          <li
+            class="main-nav--item main-nav--contact hover-underline"
+            id="main-nav--contact"
+            data-scroll-to="contact"
+          >
+            Contact
+          </li>
+        </ul>
+      </div>
     </nav>
-
 
     <!--       LANDING-->
     <section id="landing" class="landing frontpage-section">
-        <div class="landing-wrap">
-            <p><span>Front-end developer</span> and <span>designer</span> in Los Angeles, CA</p>
+      <div class="landing-wrap">
+        <p>
+          <span>Front-end engineer</span> and <span>designer</span> in Chicago,
+          IL
+        </p>
 
-            <div class="landing--badge">
-                <img src="assets/freelance%20badge.png" alt="Currenty Available for Freelance">
-            </div>
+        <div class="landing--badge">
+          <img
+            src="assets/available for coffee chats badge.png"
+            alt="Available for Coffee Chats"
+          />
         </div>
+      </div>
     </section>
 
     <div id="spacer"></div>
 
     <!--        ABOUT-->
     <section id="about" class="about frontpage-section">
-        <header>
-            <h2>about</h2>
-        </header>
-        <div class="about--content">
-            <div class="about--img">
-                <img src="assets/about-me%20image.jpg" alt="Annalyn Sarmiento Photo">
-            </div>
-            <div class="about--text">
-                <h3 class="h3 about--text-title">hello,</h3>
-
-
-                <div class="about-text--secondary">
-                    <p>I am a front-end developer and web designer based in Los Angeles, CA.
-                    </p>
-
-                    <p>
-                        I enjoy the creative process of translating the user experience and design to code. In my free time you can find me with a good book, trying out new recipes in the kitchen, or enjoying the outdoors.
-                    </p>
-
-                    <p>I’m currently available for freelance work. Let’s talk!</p>
-                </div>
-            </div>
+      <header>
+        <h2>about</h2>
+      </header>
+      <div class="about--content">
+        <div class="about--img">
+          <img
+            src="assets/about-me%20image.jpg"
+            alt="Annalyn Sarmiento Photo"
+          />
         </div>
+        <div class="about--text">
+          <h3 class="h3 about--text-title">hello,</h3>
+
+          <div class="about-text--secondary">
+            <p>
+              I am a front-end engineer and web designer originally from Los
+              Angeles, CA now based in Chicago, IL.
+            </p>
+
+            <p>
+              I enjoy the creative process of translating the user experience
+              and design to code. In my free time you can find me with a good
+              book, trying out new recipes in the kitchen, or enjoying the
+              outdoors.
+            </p>
+
+            <p>
+              I am currently a front-end engineer at
+              <a href="https://www.lumenlearning.com/" style="color: #d49e8d"
+                >Lumen Learning</a
+              >
+              helping to build products that support Diversity, Equity,
+              Inclusion, and Belonging. Let’s talk!
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--       PORTFOLIO-->
     <section id="portfolio" class="portfolio frontpage-section">
-        <header>
-            <h2>portfolio</h2>
-        </header>
+      <header>
+        <h2>portfolio</h2>
+      </header>
 
-
-        <div class="portfolio-content">
-            <div class="web-design-section">
-                <div class="web-design-item">
-                    <figure class="web-design-item--img">
-                        <img src="assets/wabi%20sabi%20spec%20mock%20up.png" alt="Wabi Sabi Squarespace Design">
-                        <figcaption>"Wabi Sabi" - Squarespace Design Spec Site</figcaption>
-                    </figure>
-                    <div class="web-design-item--hover">
-                        <img src="assets/Wabi%20Sabi%20Spec.jpg" alt="Wabi Sabi Squarespace Design Spec">
-                    </div>
-
-                    <div class="web-design--overlay">
-                        <a href="https://vimeo.com/420553028" target="_blank">Link to mock up video</a>
-                    </div>
-
-                </div>
-
-                <div class="web-design-item">
-                    <figure class="web-design-item--img">
-                        <img src="assets/twilight%20spec%20mock%20up.png" alt="Twilight Squarespace Design">
-                        <figcaption>"Twilight" - Squarespace Design Spec Site</figcaption>
-                    </figure>
-                    <div class="web-design-item--hover">
-                        <img src="assets/Twilight%20Spec.jpg" alt="Twilight Squarespace Design Spec">
-                    </div>
-
-                    <div class="web-design--overlay">
-                        <a href="https://vimeo.com/421802312" target="_blank">Link to mock up video</a>
-                    </div>
-
-                </div>
+      <div class="portfolio-content">
+        <div class="web-design-section">
+          <div class="web-design-item">
+            <figure class="web-design-item--img">
+              <img
+                src="assets/wabi%20sabi%20spec%20mock%20up.png"
+                alt="Wabi Sabi Squarespace Design"
+              />
+              <figcaption>
+                "Wabi Sabi" - Squarespace Design Spec Site
+              </figcaption>
+            </figure>
+            <div class="web-design-item--hover">
+              <img
+                src="assets/Wabi%20Sabi%20Spec.jpg"
+                alt="Wabi Sabi Squarespace Design Spec"
+              />
             </div>
+
+            <div class="web-design--overlay">
+              <a href="https://vimeo.com/420553028" target="_blank"
+                >Link to mock up video</a
+              >
+            </div>
+          </div>
+
+          <div class="web-design-item">
+            <figure class="web-design-item--img">
+              <img
+                src="assets/twilight%20spec%20mock%20up.png"
+                alt="Twilight Squarespace Design"
+              />
+              <figcaption>"Twilight" - Squarespace Design Spec Site</figcaption>
+            </figure>
+            <div class="web-design-item--hover">
+              <img
+                src="assets/Twilight%20Spec.jpg"
+                alt="Twilight Squarespace Design Spec"
+              />
+            </div>
+
+            <div class="web-design--overlay">
+              <a href="https://vimeo.com/421802312" target="_blank"
+                >Link to mock up video</a
+              >
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <!--        CONTACT-->
     <section id="contact" class="contact frontpage-section">
-        <header>
-            <h2>contact</h2>
-        </header>
+      <header>
+        <h2>contact</h2>
+      </header>
 
-        <p class="contact-main"><span>Say hello</span> — <a href="mailto:annalyn.c.s@gmail.com" class="hover-underline email-link">annalyn.c.s@gmail.com</a></p>
-        <p>or find me here:</p>
-        <div class="contact-links">
-
-            <div class="contact-link-item contact-linkedin">
-                <a href="https://www.linkedin.com/in/annalyn-sarmiento/" target="_blank">
-
-                    <img src="assets/icons/linkedin-icon.png" alt="Linkedin" />
-
-                </a>
-            </div>
-
-            <div class="contact-link-item contact-dribbble">
-                <a href="https://dribbble.com/annalyncs" target="_blank">
-
-                    <img src="assets/icons/dribbble-icon.png" alt="Dribbble" />
-                </a>
-            </div>
-
-            <div class="contact-link-item contact-github">
-                <a href="https://github.com/annalyncs" target="_blank">
-                    <img src="assets/icons/github-icon.png" alt="Github" />
-                </a>
-            </div>
-
-
+      <p class="contact-main">
+        <span>Say hello</span> —
+        <a
+          href="mailto:annalyn.c.s@gmail.com"
+          class="hover-underline email-link"
+          >annalyn.c.s@gmail.com</a
+        >
+      </p>
+      <p>or find me here:</p>
+      <div class="contact-links">
+        <div class="contact-link-item contact-linkedin">
+          <a
+            href="https://www.linkedin.com/in/annalyn-sarmiento/"
+            target="_blank"
+          >
+            <img src="assets/icons/linkedin-icon.png" alt="Linkedin" />
+          </a>
         </div>
+
+        <div class="contact-link-item contact-dribbble">
+          <a href="https://dribbble.com/annalyncs" target="_blank">
+            <img src="assets/icons/dribbble-icon.png" alt="Dribbble" />
+          </a>
+        </div>
+
+        <div class="contact-link-item contact-github">
+          <a href="https://github.com/annalyncs" target="_blank">
+            <img src="assets/icons/github-icon.png" alt="Github" />
+          </a>
+        </div>
+      </div>
     </section>
 
     <!--       FOOTER-->
     <footer role="contentinfo">
-        <p>&copy; 2020 | Annalyn Sarmiento</p>
+      <p>&copy; 2022 | Annalyn Sarmiento</p>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/analytics.js"></script>
 
     <!--Statcounter-->
     <script type="text/javascript">
-        var sc_project = 12330579;
-        var sc_invisible = 1;
-        var sc_security = "792fff6d";
-
+      var sc_project = 12330579;
+      var sc_invisible = 1;
+      var sc_security = "792fff6d";
     </script>
-    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <script
+      type="text/javascript"
+      src="https://www.statcounter.com/counter/counter.js"
+      async
+    ></script>
     <noscript>
-        <div class="statcounter"><a title="Web Analytics
-        Made Easy - StatCounter" href="https://statcounter.com/" target="_blank"><img class="statcounter" src="https://c.statcounter.com/12330579/0/792fff6d/1/" alt="Web Analytics Made Easy -
-        StatCounter"></a></div>
+      <div class="statcounter">
+        <a
+          title="Web Analytics
+        Made Easy - StatCounter"
+          href="https://statcounter.com/"
+          target="_blank"
+          ><img
+            class="statcounter"
+            src="https://c.statcounter.com/12330579/0/792fff6d/1/"
+            alt="Web Analytics Made Easy -
+        StatCounter"
+        /></a>
+      </div>
     </noscript>
     <!-- End Statcounter Code -->
-</body>
-
+  </body>
 </html>
